   - Added support for TLS Server Name Indication (SNI).
   - Linux datapath:
     * Support for the kernel versions 4.19.x and 4.20.x.
     * Support for the kernel version 5.0.x.
     * Add support for conntrack zone-based timeout policy.
   - 'ovs-dpctl dump-flows' is no longer suitable for dumping offloaded flows.
     'ovs-appctl dpctl/dump-flows' should be used instead.
   - Add L2 GRE tunnel over IPv6 support.

v2.11.0 - 19 Feb 2019
---------------------
   - OpenFlow:
     * OFPMP_TABLE_FEATURES_REQUEST can now modify table features.
   - ovs-ofctl:
     * "mod-table" command can now change OpenFlow table names.
   - ovn:
     * OVN-SB schema changed: duplicated IP with same Encapsulation type
       is not allowed any more.  Please refer to
       Documentation/intro/install/ovn-upgrades.rst for the instructions
       in case there are problems encountered when upgrading from an earlier
       version.
     * New support for IPSEC encrypted tunnels between hypervisors.
     * ovn-ctl: allow passing user:group ids to the OVN daemons.
     * IPAM/MACAM:
       - add the capability to dynamically assign just L2 addresses
       - add the capability to specify a static ip address and get the L2 one
         allocated dynamically using the following syntax:
           ovn-nbctl lsp-set-addresses <port> "dynamic <IP>"
   - DPDK:
     * Add support for DPDK 18.11
     * Add support for port representors.
   - Userspace datapath:
     * Add option for simple round-robin based Rxq to PMD assignment.
       It can be set with pmd-rxq-assign.
     * Add support for Auto load balancing of PMDs (experimental)
     * Added new per-port configurable option to manage EMC:
       'other_config:emc-enable'.
   - Add 'symmetric_l3' hash function.
   - OVS now honors 'updelay' and 'downdelay' for bonds with LACP configured.
   - ovs-vswitchd:
     * New configuration option "offload-rebalance", that enables dynamic
       rebalancing of offloaded flows.